--- a/package.json
+++ b/package.json
@@ -30,21 +30,32 @@
     "dist/"
   ],
   "dependencies": {
+    "@ant-design/icons": "^4.7.0",
+    "@modern-js/plugin-less": "^1.3.3",
     "@modern-js/runtime": "^1.0.0",
+    "@rematch/core": "^2.2.0",
+    "antd": "^4.21.4",
+    "less": "^4.1.3",
+    "less-loader": "^11.0.0",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-beautiful-dnd": "^13.1.0",
+    "react-dom": "^17.0.1",
+    "react-redux": "^8.0.2",
+    "redux": "^4.2.0",
+    "rematch": "^0.1.3"
   },
   "devDependencies": {
     "@modern-js/app-tools": "^1.0.0",
     "@modern-js/tsconfig": "^1.0.0",
-    "rimraf": "^3.0.2",
+    "@types/node": "^14",
+    "@types/react": "^17",
+    "@types/react-beautiful-dnd": "^13.1.2",
+    "@types/react-dom": "^17",
+    "husky": "4.3.8",
     "lint-staged": "^11.2.6",
     "prettier": "^2.6.2",
-    "husky": "4.3.8",
-    "typescript": "^4",
-    "@types/react": "^17",
-    "@types/react-dom": "^17",
-    "@types/node": "^14"
+    "rimraf": "^3.0.2",
+    "typescript": "^4"
   },
   "modernConfig": {
     "runtime": {
