--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "react-dom": "^17.0.1",
     "react-redux": "^8.0.2",
     "redux": "^4.2.0",
-    "rematch": "^0.1.3"
+    "rematch": "^0.1.3",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@modern-js/app-tools": "^1.0.0",
@@ -51,6 +52,7 @@
     "@types/react": "^17",
     "@types/react-beautiful-dnd": "^13.1.2",
     "@types/react-dom": "^17",
+    "@types/uuid": "^8.3.4",
     "husky": "4.3.8",
     "lint-staged": "^11.2.6",
     "prettier": "^2.6.2",
