--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "antd": "^4.21.4",
     "less": "^4.1.3",
     "less-loader": "^11.0.0",
+    "loadsh": "^0.0.4",
     "react": "^17.0.1",
     "react-beautiful-dnd": "^13.1.0",
     "react-dom": "^17.0.1",
