--- a/package.json
+++ b/package.json
@@ -38,9 +38,11 @@
     "less": "^4.1.3",
     "less-loader": "^11.0.0",
     "loadsh": "^0.0.4",
+    "monaco-editor": "^0.33.0",
     "react": "^17.0.1",
     "react-beautiful-dnd": "^13.1.0",
     "react-dom": "^17.0.1",
+    "react-monaco-editor": "^0.49.0",
     "react-redux": "^8.0.2",
     "redux": "^4.2.0",
     "rematch": "^0.1.3",
@@ -56,6 +58,7 @@
     "@types/uuid": "^8.3.4",
     "husky": "4.3.8",
     "lint-staged": "^11.2.6",
+    "monaco-editor-webpack-plugin": "^7.0.1",
     "prettier": "^2.6.2",
     "rimraf": "^3.0.2",
     "typescript": "^4"
